# dirtchamber

./: CMakeLists.txt  LICENSE  LICENSE.thirdparty  README.md
cmake/: FindAssimp.cmake  FindD3D.cmake  FindDXUT.cmake  FindKinectSDK.cmake  FindOpenCV.cmake  FindWMF.cmake
cmake/cpack/: Package.cmake  license.txt
data/: camera_parameters.xml  demo_gi.xml  demo_gi_mr.xml  noise.dds
data/cornellbox/: cornellbox.mtl
data/tracked/: happy.mtl  plane.mtl
doc/: Doxyfile
shader/: brdf.hlsl  common.h  compile.bat  d3d_mesh.hlsl  d3d_mesh_skydome.hlsl  deferred.hlsl  deferred_dlpv_kinect.hlsl  deferred_dvct_kinect.hlsl  deferred_lpv.hlsl  deferred_vct.hlsl  fs_triangle.hlsl  fuse_buffers.hlsl  importance.hlsl  lpv_inject.hlsl  lpv_normalize.hlsl  lpv_propagate.hlsl  lpv_rendervol.hlsl  lpv_tools.hlsl  overlay.hlsl  postprocessing.hlsl  pp_bloom.hlsl  pp_blur.hlsl  pp_crt.hlsl  pp_dof.hlsl  pp_film_grain.hlsl  pp_fxaa.hlsl  pp_godrays.hlsl  pp_ssao.hlsl  svo_inject.hlsl  svo_voxelize.hlsl  tonemapping.hlsl  tools.hlsl  vct_tools.hlsl
src/: common_dxut.cpp  common_dxut.h  common_gui.cpp  common_gui.h  common_renderer.cpp  common_renderer.h  drf_renderer.h  gi_renderer.h  idc.h  main_gi.cpp  main_gi_mr.cpp  pppipe.cpp  pppipe.h  skydome.h
src/dune/: assimp_mesh.cpp  assimp_mesh.h  camera.cpp  camera.h  cbuffer.h  common_tools.cpp  common_tools.h  composite_mesh.cpp  composite_mesh.h  d3d_tools.cpp  d3d_tools.h  deferred_renderer.cpp  deferred_renderer.h  dune.h  exception.h  gbuffer.cpp  gbuffer.h  kinect_gbuffer.cpp  kinect_gbuffer.h  light.cpp  light.h  light_propagation_volume.cpp  light_propagation_volume.h  logger.cpp  logger.h  math_tools.cpp  math_tools.h  mesh.cpp  mesh.h  postprocess.cpp  postprocess.h  record_tools.cpp  record_tools.h  render_target.cpp  render_target.h  sdk_mesh.cpp  sdk_mesh.h  serializer.cpp  serializer.h  serializer_tools.cpp  (+19 more)
src/ext/stb/: stb_image.h
